--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Edit.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Edit.cshtml
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label class="control-label">Razon Social</label>
+                <label class="control-label">Nombre</label>
                 <input asp-for="RazonSocial" class="form-control" />
                 <span asp-validation-for="RazonSocial" class="text-danger"></span>
             </div>
