--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Create.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Create.cshtml
@@ -14,7 +14,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label class="control-label">Razon Social</label>
+                <label class="control-label">Nombre</label>
                 <input asp-for="RazonSocial" class="form-control" />
                 <span asp-validation-for="RazonSocial" class="text-danger"></span>
             </div>
