--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Delete.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Clientes/Delete.cshtml
@@ -12,7 +12,7 @@
    
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">Razon Social</dt>
+        <dt class = "col-sm-2">Nombre</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.RazonSocial)
         </dd>
