--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Usuarios/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Usuarios/Index.cshtml
@@ -16,7 +16,7 @@
             <th>Usuario </th>
             <th>Usuario de Registro </th>
             <th>Fecha de Registro </th>
-             <th>Id de Empleado </th>
+             <th>Nombre de Empleado </th>
             <th></th>
         </tr>
     </thead>
@@ -27,16 +27,13 @@
                 @Html.DisplayFor(modelItem => item.Usuario1)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Clave)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.UsuarioRegistro)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaRegistro)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdEmpleadoNavigation.IdEmpleado)
+                @Html.DisplayFor(modelItem => item.IdEmpleadoNavigation.Nombre)
             </td>
             <td>
                     <a asp-action="Details" asp-route-id="@item.IdUsuario" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ver"><i class="fas fa-eye me-2"></i></a>
