--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Create.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Create.cshtml
@@ -1,11 +1,12 @@
-﻿@model Web__SMBJC_MVC.Models.VentaDetalle
+﻿@model Web__SMBJC_MVC.Models.Producto
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Crear Venta de Detalle</h1>
+<h1>Crear Producto</h1>
+
 
 <hr />
 <div class="row">
@@ -13,27 +14,28 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label class="control-label">Id de Venta de Detalle</label>
-                <select asp-for="IdVenta" class="form-control" asp-items="ViewBag.IdVenta"></select>
+                <label class="control-label">Id de Categoria</label>
+                <select asp-for="IdCategoria" class="form-control" asp-items="ViewBag.IdCategoria"></select>
             </div>
             <div class="form-group">
-                <label class="control-label">Id de Producto</label>
-                <select asp-for="IdProducto" class="form-control" asp-items="ViewBag.IdProducto"></select>
+                <label class="control-label">Código</label>
+                <input asp-for="Codigo" class="form-control" />
+                <span asp-validation-for="Codigo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="control-label">Cantidad</label>
-                <input asp-for="Cantidad" class="form-control" id="cantidad" />
-                <span asp-validation-for="Cantidad" class="text-danger"></span>
+                <label class="control-label">Nombre</label>
+                <input asp-for="Nombre" class="form-control" />
+                <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="control-label">Precio Unitario</label>
-                <input asp-for="PrecioUnitario" class="form-control" id="precioUnitario" />
-                <span asp-validation-for="PrecioUnitario" class="text-danger"></span>
+                <label class="control-label">Decripción</label>
+                <input asp-for="Descripcion" class="form-control" />
+                <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="control-label">Total</label>
-                <input asp-for="Total" class="form-control" id="total" readonly />
-                <span asp-validation-for="Total" class="text-danger"></span>
+                <label class="control-label">Precio</label>
+                <input asp-for="Precio" class="form-control" />
+                <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
@@ -42,9 +44,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Volver a la Lista</a>
-</div>
 
 @section Scripts {
     @{
