--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/Shared/_Layout.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/Shared/_Layout.cshtml
@@ -69,8 +69,8 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Ventas</a>
                                 <div class="dropdown-menu rounded">
-                                    <a asp-controller="ventas" asp-action="Index" class="dropdown-item">Ventas</a>
-                                    <a asp-controller="VentaDetalles" asp-action="Index" class="dropdown-item">Detalles de venta</a>
+                                    <a asp-controller="VentaDetalles" asp-action="Index" class="dropdown-item">Realizar Venta</a>
+                                    <a asp-controller="ventas" asp-action="Index" class="dropdown-item">venta</a>
                                 </div>
                             </div>
                             <div class="nav-item dropdown">
