--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Delete.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Eliminar Detalle de Venta</h1>
+<h1>Eliminar Venta</h1>
 
 <h3>¿Estas seguro que quiere eliminar venta de detalle?</h3>
 <div>
