--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Index.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Venta de Detalle</h1>
+<h1>Ventas</h1>
 
 <p>
     <a asp-action="Create">Crear Nuevo</a>
