--- a/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Details.cshtml
+++ b/Sis_457SMBJC/Web__SMBJC_MVC/Views/VentaDetalles/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Detalle de Venta de Detalle</h1>
+<h1>Detalle de Venta </h1>
 
 <div>
    
@@ -31,13 +31,10 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaRegistro)
         </dd>
-        <dt class = "col-sm-2">Estado</dt>
+        
+        <dt class = "col-sm-2">Producto</dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-        <dt class = "col-sm-2">Id de Producto</dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdProductoNavigation.IdProducto)
+            @Html.DisplayFor(model => model.IdProductoNavigation.Nombre)
         </dd>
         <dt class = "col-sm-2">Id de Venta</dt>
         <dd class = "col-sm-10">
